NodeJS open html files using path and fs; then show the content on the browser

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "how_to_create_a_class.js",
   "scripts": {
-    "start": "node ./reference/index",
-    "dev": "nodemon ./reference/index"
+    "start": "node ./index",
+    "dev": "nodemon ./index"
   },
   "repository": {
     "type": "git",
